svg converter function developments

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/websockets": "^10.0.0",
     "@types/mqtt": "^0.0.34",
+    "jsdom": "^26.0.0",
     "mongoose": "^7.6.3",
     "mqtt": "^5.1.3",
     "reflect-metadata": "^0.2.0",
@@ -42,6 +43,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
